style.css
html{
}
html body{
  margin-right: auto;
  margin-left: auto;
  font-family: "Roboto";
  font-weight: 300;
  line-height: 1.3em;
  font-size: 20px;
  min-width: 300px;
}

p{
  margin-bottom: 0.5em;
}

a{
  color: black;
  text-decoration: none;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  display: inline-block;
}
a:hover{
  border-color: black;
}

header.site-header{
  height: 108px;
  background-color: #333333;
  background-image: url(images/phable-white.svg);
  background-position-x: 28px;
  background-position-y: 6px;
  background-repeat: no-repeat;
  background-size: 250px 100px;
  text-indent: -9999px;
}


section, footer .footer-inner, section.intro .intro-inner{
  /*width: 300px;*/
  /*padding-left: 30%;*/
  padding: 0 5vw;
}
@media (min-width: 768px) {
  section, footer .footer-inner, section.intro .intro-inner{
    padding: 0 30vw;
    width: 40vw;
  }
}
section{
  margin-top: 83px;
}
  section a{
    font-weight: 900;
  }
  section h2{
    font-weight: 400;
    font-size: 2.7em;
    line-height: 1em;
    margin-bottom: 0.5em;
    /*margin-right: -200px;*/
  }


section.intro{
  background-image: url(images/header.jpg);
  background-position-x: 50%;
  background-position-y: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  margin: 0;
  width: 100%;
  padding: 0;
}
  section.intro .intro-inner{
  }
  section.intro h1{
    text-indent: -9999px;
    background: url(images/h-we-are-phable.svg) 50% 50% no-repeat;
    background-origin: content-box;
    /*padding: 76px 0 0 205px;*/
    /*height: 332px;*/
    /*width: 609px;*/
    width: 100%;
    height: 40vw;
    max-width: 600px;
    padding: 5vw 0 4vw;
    margin: 0 auto;
  }
  @media (min-width: 768px) {
    section.intro h1{
      height: 29vw;
      max-width: 60vw;
    }
  }
  section.intro .slogan{
    background-color: rgba(255,255,255,0.8);
    /*margin-left: 200px;*/
    /*height: 93px;*/
    margin: 0 -5vw;
    padding: 4vw 5vw 5vw;
    /*width: 360px;*/
  }
  @media (min-width: 768px) {
    section.intro .slogan{
      margin: 0 -15px;
      padding: 15px 20px 30px;
      width: 40vw;
      box-sizing: border-box;
    }
  }

section.about{}
  section.about h2{
    text-indent: -9999px;
    background: url(images/h-about-us.svg) 0 0 no-repeat;
  }

section.contact{}
  section.contact h2{
    text-indent: -9999px;
    background: url(images/h-talk-to-us.svg) 0 0 no-repeat;
  }
  section.contact input,
  section.contact textarea
  {
    width: 100%;
    display: block;
    font-size: 1em;
    margin-bottom: 10px;
    border: 2px #333 solid;
    box-sizing: border-box;
    max-width: 500px;
  }
  section.contact input{
    height: 30px;
  }
  section.contact label{
    font-size: 0.8em;
  }
  section.contact input[type="submit"]{
    background-color: #333;
    height: 30px;
    font-weight: 400;
    color: white;
    border: none;
    width: 100px;
    margin-top: 20px;
  }
  section.contact input[name="_gotcha"]{
    display: none;
  }


footer{
  background-color: #e5e5e5;
  padding-top: 20px;
  padding-bottom: 10px;
  margin-top: 83px;
}
  footer .logo{
    width: 113px;
    height: 25px;
    margin-bottom: 10px;
    background-image: url(images/phable-black.svg);
    background-position-x: 0;
    background-position-y: 0;
    background-repeat: no-repeat;
    text-indent: -9999px;
  }
  footer p{
    font-size: 0.7em;
    line-height: 1em;
    opacity: 0.5;
  }

